2006-04-20	Alexander Hansen	<alexkhansen@users.sourceforge.net>

	* Bootstrap.pm:	Add 10.4.6 to supported OS flavors.

2006-04-10  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Check for %{PatchScript} using the correct case.

2006-04-08  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Validate PatchScript correctly even when file being
	validated is in the same directory from which 'fink validate' is 
	being run; also, recognize %{PatchScript} during validation no matter
	what its case.

2006-03-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Configure.pm, FinkVersion.pm.in: 10.4 has a bindist now

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: Intel OS X now up to darwin8.5.3

2006-03-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: when an error is generated on Intel hardware, warn 
	users that many maintainers don't have Intel hardware.

2006-03-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* FinkVersion.pm.in: new function default_binary_version

2006-03-17  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: handle when there are extra ='s in the environment vars

2006-03-06  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Fix *SetPATH handler

2006-03-06  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Check for dev-tools using VirtPackage directly
	instead of using the full Package/PkgVersion database API.

2006-03-03  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Add missing function import

2006-02-23  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Use the gcc build number for the revision if
	possible; also make sure tests are using /usr/bin/gcc rather than
	some random gcc in the path (should speed things up a little if
	ccache or distcc are hanging around)
	(backport)

2006-02-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Configure.pm:  Add a list of existing binary distributions to the