@@ -74,3 +74,6 @@ sub do_notify {
 		return 1;
 	}
 }
+
+1;
+
