@@ -68,3 +68,5 @@ sub do_notify {
 
 	return 1;
 }
+
+1;
