@@ -70,3 +70,5 @@ sub do_notify {
 		return 1;
 	}
 }
+
+1;
